data/forge_javadoc/1.9.4/raw/net/minecraft/block/material/MapColor.md
---
title: "MapColor"
description: "public class MapColor extends java.lang.Object"
package: "net/minecraft/block/material"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/block/material/MapColor.html"
sourceType: javadoc
---

# MapColor

**Inheritance:** java.lang.Object → net.minecraft.block.material.MapColor

## Class signature

```java
public class MapColor extends java.lang.Object
```

## Methods

- `int getMapColor(int p_151643_1_)`

## Fields

- `static MapColor ADOBE`
- `static MapColor AIR`
- `static MapColor BLACK`
- `static MapColor BLUE`
- `static MapColor BROWN`
- `static MapColor CLAY`
- `static MapColor CLOTH`
- `int colorIndex`
- `static MapColor [] COLORS`
- `int colorValue`
- `static MapColor CYAN`
- `static MapColor DIAMOND`
- `static MapColor DIRT`
- `static MapColor EMERALD`
- `static MapColor FOLIAGE`
- `static MapColor GOLD`
- `static MapColor GRASS`
- `static MapColor GRAY`
- `static MapColor GREEN`
- `static MapColor ICE`
- `static MapColor IRON`
- `static MapColor LAPIS`
- `static MapColor LIGHT_BLUE`
- `static MapColor LIME`
- `static MapColor MAGENTA`
- `static MapColor NETHERRACK`
- `static MapColor OBSIDIAN`
- `static MapColor PINK`
- `static MapColor PURPLE`
- `static MapColor QUARTZ`
- `static MapColor RED`
- `static MapColor SAND`
- `static MapColor SILVER`
- `static MapColor SNOW`
- `static MapColor STONE`
- `static MapColor TNT`
- `static MapColor WATER`
- `static MapColor WOOD`
- `static MapColor YELLOW`
